WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247923
With UI-side compositing enabled, some reflections tests fail
https://bugs.webkit.org/show_bug.cgi?id=247923
Summary
With UI-side compositing enabled, some reflections tests fail
Simon Fraser (smfr)
Reported
2022-11-14 16:09:08 PST
Lots of broken reflection tests:
https://build.webkit.org/results/Apple-Ventura-Debug-WK2-GPUProcess-Tests/256605@main%20(147)/results.html
compositing/reflections/direct-image-object-fit-reflected.html compositing/reflections/mask-and-reflection.html compositing/reflections/nested-reflection-opacity2.html compositing/reflections/opacity-in-reflection.html
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2022-11-14 16:09:34 PST
<
rdar://problem/102277328
>
Simon Fraser (smfr)
Comment 2
2022-11-14 16:11:22 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6493
EWS
Comment 3
2022-11-15 18:34:30 PST
Committed
256718@main
(e1737d406653): <
https://commits.webkit.org/256718@main
> Reviewed commits have been landed. Closing PR #6493 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug