With UI-side compositing enabled, some reflections tests fail https://bugs.webkit.org/show_bug.cgi?id=247923 rdar://102277328

Reviewed by Cameron McCormack.

`updateCustomAppearance()` is always called on cloned layers. This set the `CustomAppearanceChanged`
bit, which resulted in the UI Process removing the custom appearance, which removes the layer
background color. This would clobber any background color set on "solid color" layer clones.

Other minor code cleanup.

* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.cpp:
* Source/WebCore/platform/graphics/ca/GraphicsLayerCA.h:
* Source/WebKit/WebProcess/WebPage/RemoteLayerTree/PlatformCALayerRemote.cpp:
(WebKit::PlatformCALayerRemote::setBackgroundColor):
(WebKit::PlatformCALayerRemote::updateCustomAppearance):

Canonical link: https://commits.webkit.org/256718@main